--- a/app/src/main/res/layout/activity_form_contato.xml
+++ b/app/src/main/res/layout/activity_form_contato.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".FormContatoActivity">
 
+
     <EditText
         android:id="@+id/nomeContato"
         android:layout_width="333dp"
         android:layout_height="41dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Nome contato"
+        android:hint="@string/nomeContato"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.205"
@@ -36,7 +37,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="Telefone contato"
+        android:hint="@string/telefoneContato"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.205"
@@ -49,7 +50,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="E-mail contato"
+        android:hint="@string/emailContato"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.205"
@@ -60,7 +61,7 @@
         android:id="@+id/btnSalvarContato"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Salvar"
+        android:text="@string/btnSalvarContato"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
